<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".NewSkillFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/new_skill_fragment_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_main_background_newSkill_fragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_one_fragment_new_skill"
            style="@style/card_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            app:cardCornerRadius="10dp"
            app:contentPadding="@dimen/card_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/new_skill_name"
                style="@style/fragment_new_skill_set_form_text_style2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/new_task_name_input"
                android:text="@string/name_semicolon" />

            <EditText
                android:id="@+id/new_skill_name_input"
                style="@style/fragment_new_skill_set_user_form_style3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/skill_name_input_hint"
                android:importantForAutofill="no"
                android:inputType="text" />

            <TextView
                android:id="@+id/new_skill_missing_name"
                style="@style/missing_field_error_warningNew"
                android:layout_width="match_parent"
                android:text="@string/name_can_not_be_blank"
                android:visibility="gone"
                tools:visibility="gone" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_two_fragment_new_skill"
            style="@style/card_style"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/new_skillSet_body_padding"
            app:cardCornerRadius="10dp"
            app:contentPadding="@dimen/card_padding"
            app:layout_constraintEnd_toEndOf="@+id/card_one_fragment_new_skill"
            app:layout_constraintStart_toStartOf="@+id/card_one_fragment_new_skill"
            app:layout_constraintTop_toBottomOf="@+id/card_one_fragment_new_skill">

            <TextView
                android:id="@+id/add_tasks_to_skill_label"
                style="@style/fragment_new_skill_set_form_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_tasks_from_another_skill" />

            <com.example.skilltracker.MultiSelectionSpinner
                android:id="@+id/task_multi_select_list"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginLeft="40sp"
                android:layout_marginTop="45sp"
                android:layout_marginRight="40sp"
                android:background="@drawable/custom_spinner"
                android:spinnerMode="dropdown" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/create_new_skill_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/new_skillSet_body_padding"
            android:layout_marginTop="@dimen/new_skillSet_create_button_padding"
            android:background="@drawable/custom_button_one"
            android:text="@string/create_skill"
            android:textColor="@color/fragment_new_skill_set_button_text_color"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/add_new_tasks_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_two_fragment_new_skill" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_three_fragment_new_skill"
            style="@style/card_style"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="@dimen/new_skillSet_create_button_padding"
            android:layout_marginBottom="16dp"
            android:visibility="gone"
            app:cardCornerRadius="10dp"
            app:contentPadding="@dimen/card_padding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/card_two_fragment_new_skill"
            app:layout_constraintStart_toStartOf="@+id/card_two_fragment_new_skill"
            app:layout_constraintTop_toBottomOf="@+id/create_new_skill_button"
            app:layout_constraintVertical_bias="0.0"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tasks_already_added_label"
                style="@style/fragment_new_skill_set_form_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tasks_already_added"
                android:textAlignment="center" />

            <ListView
                android:id="@+id/current_tasks_list_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="150dp"
                android:layout_marginBottom="5dp"
                android:isScrollContainer="true"
                android:scrollbars="vertical">

            </ListView>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/add_new_tasks_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="@dimen/new_skillSet_body_padding"
            android:background="@drawable/custom_button_one"
            android:text="@string/add_new_tasks"
            android:textColor="@color/fragment_new_skill_set_button_text_color"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/create_new_skill_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/create_new_skill_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>