...
    <string name="skillset_fragment_label">My Skill Sets</string>

    <!-- New skill set/skill/task strings -->
    <string name="name_semicolon">Name:</string>
    <string name="description_semicolon">Description:</string>
    <string name="new_skill_set">New Skill Set</string>
    <string name="create_skill_set">Create Skill Set</string>
    <string name="name_can_not_be_blank">Name can not be blank</string>
    <string name="description_can_not_be_blank">Description can not be blank</string>
    <string name="create_skill">Create Skill</string>
    <string name="completed">Completed:\u0020</string>
    <string name="update_skill">Update Skill</string>
    <string name="update_skillSet">Update Skill Set</string>
...
